acréscimo do exercício 15

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <button onclick="exercicio12()">Exercício 12</button>
     <button onclick="exercicio13()">Exercício 13</button>
     <button onclick="exercicio14()">Exercício 14</button>
+    <button onclick="exercicio15()">Exercício 15</button>
     <button onclick="exercicio16()">Exercício 16</button>
     <button onclick="exercicio17()">Exercício 17</button>
     <button onclick="exercicio18()">Exercício 18</button>
